[package]
name = "node_tree"
version = "0.6.0"
edition = "2021"
rust-version = "1.78"

exclude = [
    ".github/*",
    ".vscode/*",
    "tests/*",
]

keywords    = ["framework", "utility", "gamedev"]
repository  = "https://github.com/LunaticWyrm467/node_tree"
description = """
An extendable system made up of autonomous execution services known as nodes organized in a tree of processes.
Inspired by Godot! 
"""
license = "MIT OR Apache-2.0"

[dependencies]
chrono           = "0.4.38"
node_tree_derive = { path = "../node_tree_derive", version = "0.5.0" }
