[package]
name         = "node_tree"
version      = "0.10.0"
edition      = "2021"
rust-version = "1.78"

exclude = [
    ".github/*",
    ".vscode/*",
    "tests/*",
]

keywords    = ["framework", "utility", "gamedev"]
repository  = "https://github.com/LunaticWyrm467/node_tree"
description = """
An extendable scene graph made up of autonomous execution services known as nodes organized in a tree of processes.
Inspired by Godot! 
"""
license = "MIT OR Apache-2.0"

[dependencies]
node_tree_derive = { path = "../node_tree_derive", version = "0.8.0" }
chrono           = "0.4.38"
dashmap          = "6.1.0"
ctor             = "0.2.8"
toml_edit        = "0.22.22"
glam             = { version = "0.29.*", optional = true }

[features]
default = []
glam    = ["dep:glam"]
