[package]
name    = "node_tree"
version = "0.13.0"
edition = "2024"

keywords    = ["framework", "utility", "gamedev"]
repository  = "https://github.com/LunaticWyrm467/node_tree"
description = """
An extendable scene graph made up of autonomous execution services known as nodes organized in a tree of processes.
Inspired by Godot! 
"""
license = "MIT OR Apache-2.0"

[dependencies]
node_tree_derive = { path = "../node_tree_derive", version = "0.10.0" }
chrono           = "0.4.38"
dashmap          = "6.1.0"
ctor             = "0.2.9" # https://github.com/mmastrac/rust-ctor/issues/309
toml_edit        = "0.22.22"
glam             = { version = "0.29.*", optional = true }
thiserror        = "2.0.12"
intertrait       = { git = "https://github.com/LunaticWyrm467/intertrait" }

[features]
default = []
glam    = ["dep:glam"]
