[package]
name = "node_tree_derive"
version = "0.2.0"
edition = "2018"

exclude = [
    ".github/*",
    ".vscode/*",
    "tests/*",
]

keywords    = ["framework", "utility", "gamedev"]
repository  = "https://github.com/LunaticWyrm467/node_tree"
description = "Provides the `NodeSys` macro for the `node_tree` crate."
license     = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
